<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/network_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/network_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/network_description_back"
            app:srcCompat="@drawable/ic_zmshow_btn_surf_back_disabled" />

        <ImageButton
            android:id="@+id/network_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/network_description_forward"
            app:srcCompat="@drawable/ic_zmshow_btn_surf_forward_disabled" />

        <EditText
            android:id="@+id/network_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:singleLine="true"
            android:imeOptions="actionGo"
            android:selectAllOnFocus="true"
            android:hint="@string/network_edit_hint_text"
            android:autofillHints="@string/network_edit_hint_text"/>

        <ImageButton
            android:id="@+id/network_browse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/network_description_browse"
            app:srcCompat="@drawable/ic_zmshow_btn_browse"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/network_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/network_description_refresh"
            app:srcCompat="@drawable/ic_zmshow_btn_refresh"
            android:visibility="visible"/>
    </LinearLayout>
    <WebView
        android:id="@+id/network_webview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/network_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ProgressBar
        android:id="@+id/network_progressbar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:max="100"
        android:progress="0"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/network_toolbar"/>
    <FrameLayout
        android:id="@+id/network_fullscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>